2005-11-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxEditor/addActionListener.java:
	New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxEditor/constructor.java:
	New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxEditor/removeActionListener.java:
	New test.

2005-11-04  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/BoxLayout/layoutContainer.java: Added new
	test for overflow case.

2005-11-01  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Dialog/size.java: Fixed logic in test case.

2005-11-02  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/java/awt/Component/getForeground: Modified test
	to show that the foreground is fetched from the parent component
	if present.

2005-11-02  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/java/awt/Component/getMaximumSize.java: New test.

2005-11-01  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Dialog/size.java: New Test.

2005-11-02  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/java/awt/Container/addImpl.java: New test.
	* gnu/testlet/java/awt/Container/DisabledEventQueue: Auxiliary
	class for the above test.

2005-11-01  Tom Tromey  <tromey@redhat.com>

	* .settings/org.eclipse.jdt.core.prefs: Ensure 1.4 settings are used.
	* .settings/org.eclipse.jdt.ui.prefs: Likewise.

2005-11-01  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/testlet/java/net/URL/URLTest.java:
	(test_cr601a): Added "//" to test values.
	(test_cr601b): Dito.

2005-10-30  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectInputStream/registerValidation.java:
	Check fields and priority order.
	* gnu/testlet/java/io/ObjectInputStream/TestObjectInputValidation.java:
	Add self reference, register multiple times with different priorities,
	add equals().

2005-10-30  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/runner/Mauve.java
	(execute): save default locale before running tests and restore it 