@@ -1,5 +1,10 @@
 2005-11-07  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxEditor/constructor.java:
+	New test.
+
+2005-11-07  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxEditor/addActionListener.java:
 	New test,
 	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxEditor/constructor.java:
